# weather-cli-rs

./: Cargo.toml  LICENSE  README.md  city_config.json
src/: api.rs  args.rs  city.json  city_config.json  config.rs  key_config.json  main.rs  models.rs  token.rs  utils.rs
